Ignore some build stuff

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,13 @@
 build/
 classes/
 *.iml
+.vscode
+***/.project
+***/.settings
+***/.classpath
+legacy-user-app/bin/
+portal-demo/bin/
+user-migration-federation-provider/bin/
+user-model/bin/
+
+
